# ndaag

./: .gitignore  README.md  pyproject.toml
.spyproject/config/backups/: workspace.ini.bak
dashboard/: README.md  app.py  requirements.txt
dashboard/.streamlit/: config.toml
deploiment/: build_package.sh
development/: developscript.py
ndaag/: __init__.py  stock.py  stock_analysis.py
ndaag/demodata/: whatchlist.json
ndaag/indeces/: __init__.py  abstractclass.py  cci.py  indeces.py  macd.py  momentum.py
ndaag/modules/: signal_processing.py
