[tool.poetry]
name = "ndaag"
version = "0.1.0"
description = "Thomas's stocks package"
authors = ["Thomas Vergauwen <thomas.vergauwen@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
yfinance = "^0.2.43"
ipykernel = "^7.2.0"
matplotlib = "^3.10.8"

[tool.poetry.group.dev.dependencies]
poetry = "^1.8.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
